WFP-1565 correct spacing on two thirds notification banner

--- a/assets/sass/local.sass
+++ b/assets/sass/local.sass
@@ -39,3 +39,6 @@
 
 .moj-notification-badge 
   padding-top: 3px
+
+.govuk-notification-banner__content p
+  max-width: 100% 
